--- a/web/styles.css
+++ b/web/styles.css
@@ -58,6 +58,7 @@ a, a:visited {
     margin: 0;
 }
 td {
+    vertical-align: top;
     padding-right: 10px;
     padding-left: 0;
     margin: 0;
@@ -65,9 +66,10 @@ td {
 td.right_td {
     text-align: right;
 }
-/* .varname_store {
+.varname_store {
     text-align: right;
-} */
+    white-space: nowrap;
+}
 #box {
     display: flex;
     flex-flow: column;
@@ -155,6 +157,7 @@ input:focus, textarea:focus{
     border: 0;
     width: 100%;
     height: 100px;
+    text-transform: lowercase;
     resize: none;
     /* background-color: #fff; */
     background-color: rgba(0, 0, 0, 0); border-color: rgba(0, 0, 0, 0)
