--- a/web/styles.css
+++ b/web/styles.css
@@ -25,9 +25,10 @@ body {
     font-family: hack;
     font-size: 16px;
 }
-h1 {
+h1, h1 a {
     font-size: 16px;
-    font-weight: bold;
+    color: #a00;
+    font-weight: normal;
 }
 a, a:visited {
     color: #000;
@@ -39,7 +40,7 @@ a, a:visited {
     position: absolute;
     top: 0;
     right: 0;
-    width: 40vw;
+    width: 33vw;
     color: #333;
     padding: 1rem;
     margin-right: 10px;
