--- a/web/styles.css
+++ b/web/styles.css
@@ -15,6 +15,8 @@
     --n3: 0.7692307692307693;
     --n2: 0.8461538461538461;
     --n1: 0.9230769230769231;
+
+    --panel-back: #fff;
 }
 
 html,
@@ -27,14 +29,15 @@ body {
 }
 h1, h1 a {
     font-size: 16px;
-    color: #000;
+    color: #a00;
     font-weight: normal;
 }
 a, a:visited {
-    color: #000;
     text-decoration: none;
-    font-weight: bold;
     cursor: pointer;
+}
+a:hover {
+    text-decoration: underline;
 }
 #state {
     position: absolute;
@@ -56,7 +59,6 @@ a, a:visited {
 }
 #state_table {
     margin: 0;
-    color: #a00;
 }
 #state_table .vrbl {
     color: #a00;
@@ -198,7 +200,7 @@ input:focus, textarea:focus{
 
 #modal_content {
 	width: 50%;
-    border: 2px solid #ccc;
+    /* border: 2px solid #ccc; */
     background-color: var(--panel-back);
     color: var(--main-txt-color);
 	margin: auto;
