--- a/web/styles.css
+++ b/web/styles.css
@@ -31,6 +31,7 @@ h1, h1 a {
     font-size: 16px;
     color: #a00;
     font-weight: normal;
+    text-underline-offset: 6px;
 }
 a, a:visited {
     text-decoration: none;
