--- a/web/styles.css
+++ b/web/styles.css
@@ -15,6 +15,8 @@
     --n3: 0.7692307692307693;
     --n2: 0.8461538461538461;
     --n1: 0.9230769230769231;
+
+    --panel-back: #fff;
 }
 
 html,
@@ -29,19 +31,20 @@ h1, h1 a {
     font-size: 16px;
     color: #a00;
     font-weight: normal;
+    text-underline-offset: 6px;
 }
 a, a:visited {
-    color: #000;
     text-decoration: none;
-    font-weight: bold;
     cursor: pointer;
+}
+a:hover {
+    text-decoration: underline;
 }
 #state {
     position: absolute;
     top: 0;
     right: 0;
     width: 33vw;
-    color: #333;
     padding: 1rem;
     margin-right: 10px;
     z-index: 100;
@@ -57,6 +60,9 @@ a, a:visited {
 }
 #state_table {
     margin: 0;
+}
+#state_table .vrbl {
+    color: #a00;
 }
 td {
     vertical-align: top;
@@ -158,7 +164,6 @@ input:focus, textarea:focus{
     border: 0;
     width: 100%;
     height: 100px;
-    text-transform: lowercase;
     resize: none;
     /* background-color: #fff; */
     background-color: rgba(0, 0, 0, 0); border-color: rgba(0, 0, 0, 0)
@@ -196,7 +201,7 @@ input:focus, textarea:focus{
 
 #modal_content {
 	width: 50%;
-    border: 2px solid #ccc;
+    /* border: 2px solid #ccc; */
     background-color: var(--panel-back);
     color: var(--main-txt-color);
 	margin: auto;
