--- a/web/styles.css
+++ b/web/styles.css
@@ -51,7 +51,6 @@ a:hover {
 
     border-width: 3px;
     background-color: #fff;
-    border-style: solid;
     border-image: 
       linear-gradient(
         to bottom, 
@@ -199,7 +198,7 @@ input:focus, textarea:focus{
 	width: 100%;
 	height: 100%;
 	overflow: auto;
-    display: none;
+    /* display: none; */
 	background-color: rgba(154, 153, 153, 0.1);
 }
 
